DP-12210 DP-12208 ImportControl and EqualsAvoidNull