@@ -25,16 +25,16 @@ public class VdbValueConverter implements ValueConverter {
             return (T) new Float(valueStr);
         } else if (targetType.equals(Integer.class)) {
             try {
-                return (T) new Integer(valueStr);
+                return (T) Integer.valueOf(valueStr);
             } catch (NumberFormatException e) {
-                return (T) new Integer(new Double(valueStr).intValue());
+                return (T) Integer.valueOf(new Double(valueStr).intValue());
             }
         } else if (targetType.equals(Long.class)) {
             return (T) new Long(valueStr);
         } else if (targetType.equals(String.class)) {
             return (T) new String(valueStr);
         } else if (targetType.equals(Boolean.class)) {
-            if (valueStr.equals("1") || valueStr.equalsIgnoreCase("true")) {
+            if ("1".equals(valueStr) || "true".equalsIgnoreCase(valueStr)) {
                 return (T) Boolean.TRUE;
             } else {
                 return (T) Boolean.FALSE;
